fix: harden FileTransferHandlerImpl against multiple security vulnerabilities
- JSON injection: escape filename/fileId in upload JSON response
- Path traversal: fix getFilename() double-substring bug, reject '..' patterns
- Null safety: guard against null filename and Content-Disposition header
- Log injection: sanitize user-controlled values, use SLF4J placeholders
- Input validation: whitelist fileId parameter format before processing
- HMAC signing: sign file IDs with per-instance HMAC-SHA256 to prevent forgery
- Logging hygiene: replace printStackTrace() with log.warn() in close()
- Null-safe getFilename(): check part and header before parsing

Signed-off-by: manticore-projects <andreas@manticore-projects.com>